--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,18 @@
     text-align: center;
 }
 
-.popover-body p {
+.App-header {
+    background-color: #222;
+    height: 60px;
+    color: white;
+    margin-bottom: 20px;
+}
+
+.App-title {
+    color: white;
+    font-size: 1.5em;
+}
+
+.delay, p {
     margin: 0
 }
